--- a/events/templates/events/_guests.html
+++ b/events/templates/events/_guests.html
@@ -37,5 +37,6 @@
 <p>
     <a id="guests_add_link" class="button" href="{% url event-guests-add event.id %}">Add Guest</a>
     <a class="button" href="{% url event-print event.id %}">Print Sign In Sheet</a>
+    <a class="button" href="{% url event-spreadsheet event.id %}">Guest Spreadsheet</a>
 </p>
 <div id="guests_add_container" class="hidden"></div>
