--- a/events/templates/events/management.html
+++ b/events/templates/events/management.html
@@ -2,7 +2,7 @@
 {% load comments %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
-    <a href="{% url event-list %}">Events</a> &rsaquo;
+    <a href="{% url event-show %}">Events</a> &rsaquo;
 {% endblock %}
 {% block right_content %}
     <div class="grid_9 alpha omega">
