--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -3,7 +3,7 @@
 <div class="box_one_top"></div>
 <div class="box_one_middle">
     <h3>Magnify Your Impact</h3>
-    <a href='{% url event-list %}'> Host an energy meeting</a><br/>
+    <a href='{% url event-show %}'> Host an energy meeting</a><br/>
     <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend</a><br/>
     <a href='{% url twitter_oauth_post_status %}' id='twitter_status_link'>Share on twitter</a><br/>
     <a href='{% url group_create %}'>Create a team</a><br/>
