--- a/events/templates/events/_manager_links.html
+++ b/events/templates/events/_manager_links.html
@@ -1,5 +1,5 @@
 <ul id="event_manager_nav">
-    {% url event-show event.id as link %}
+    {% url event-detail event.id as link %}
     <li><a href="{% if link == request.path %}#{% else %}{{ link }}{% endif %}">Details</a></li>
     {% url event-guests event.id as link %}
     <li><a href="{% if link == request.path %}#{% else %}{{ link }}{% endif %}">Guest List</a></li>
