--- a/events/templates/events/rsvp.html
+++ b/events/templates/events/rsvp.html
@@ -3,7 +3,7 @@
 {% load comments %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
-    <a href="{% url event-list %}">Events</a> &rsaquo;
+    <a href="{% url event-show %}">Events</a> &rsaquo;
     {{ event }}
 {% endblock %}
 {% block right_content %}
@@ -22,7 +22,7 @@
             {% if guest.rsvp_status and not request.GET.reset %}
                 <p>
                     You are: <span>{{ guest.get_rsvp_status_display }}</span><br />
-                    (<a href="{% url event-show event.id %}?reset=true">change</a>)
+                    (<a href="{% url event-detail event.id %}?reset=true">change</a>)
                 </p>
             {% else %}
                 {% include "events/_rsvp_form.html" %}
