Changing the word group to team

--- a/templates/rah/registration_email.html
+++ b/templates/rah/registration_email.html
@@ -15,10 +15,10 @@
     <ul>
         <li>Jump in and complete this month’s <a href="http://{{ domain }}{% url index %}">featured action</a>.</li>
         <li>Get plugged in to your local energy efficiency scene by <a href="http://{{ domain }}{% url group_list %}">
-            finding a group</a>.</li> 
+            finding a team</a>.</li> 
         <li>Are you the first to arrive at the party? 
-            <a href="http://{{ domain }}{% url group_create %}">Start a group</a> for your 
-            neighborhood, school, church, or knitting club. Then, organize your group to take 
+            <a href="http://{{ domain }}{% url group_create %}">Start a team</a> for your 
+            neighborhood, school, church, or knitting club. Then, organize your team to take 
             action together.</li> 
         <li>Spread the word! <a href="http://{{ domain }}{% url index %}">Tweet it out</a>, 
             <a href="http://{{ domain }}{% url index %}">invite friends</a>, send some smoke 
