put in an events survey check, is a survey does not yet exist for an event type, just display an empty commitment card rather than throwing an error.

--- a/events/templates/events/_commitments.html
+++ b/events/templates/events/_commitments.html
@@ -17,5 +17,9 @@
 </div>
 <br class="spacer" />
 <div id="commitment_card">
-    {% include survey.template_name %}
+    {% if survey %}
+        {% include survey.template_name %}
+    {% else %}
+        <p>A commitment card does not yet exist for this event type</p>
+    {% endif %}
 </div>
