-Commitments entered for guests are applied to users' accounts after they log in or register -Modified logged in homepage to make a bit more sense

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -16,7 +16,7 @@
             You earn points by completing <a href="{% url action_show %}">actions</a>. Every point you earn means one less pound of coal needs to be burned.
         </p> 
         <p class="center">
-            <a href="{% url register %}" class="button" id="home_page_join_button">Join the Challenge</a><br/>
+            <a href="{% url action_show %}" class="button" id="home_page_join_button">Take Action</a><br/>
             <a href="/coal-challenge/">Learn more</a> about the challenge.
         </p>
            
