misc twaks: -removed featured action status from logged in homepage -Adding all users to sitemap.xml -Updating meta description

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta name="y_key" content="9d9c6c76735e5a92"/>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
         <meta name="keywords" content="{% block meta_keywords %}energy efficiency, home energy, climate change, repower at home, alliance for climage protection{% endblock %}" />
-        <meta name="description" content="{% block meta_desc %}Repower at Home helps you save energy at home and organize your community for a cleaner future.{% endblock %}" />
+        <meta name="description" content="{% block meta_desc %}By October 10th, we can take action to keep 1 million pounds of dirty coal from polluting our air and our communities. You earn points by completing actions. Every point you earn means one less pound of coal needs to be burned.{% endblock %}" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
         {% if debug %}
             <link rel="stylesheet" href="{% dated_static 'css/style.css' %}" type="text/css" media="screen" charset="utf-8"/>
