--- a/events/templates/events/_form.html
+++ b/events/templates/events/_form.html
@@ -8,7 +8,7 @@
         {% else %}
             {{ field.label_tag }}{{ field }}
         {% endif %}
-        <span class="event_help_text">{{ field.help_text }}</span>
+        <span class="help_text">{{ field.help_text }}</span>
         {% for error in field.errors %}
             <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
         {% endfor %}
