--- a/templates/rah/_overset_form.html
+++ b/templates/rah/_overset_form.html
@@ -5,6 +5,9 @@
     <div class="form_row overset {% if field.errors %}error{% endif %}">
         {{ field.label_tag }}
         {{ field }}
+        {% if field.help_text %}
+            <div class="help_text">{{ field.help_text }}</div>
+        {% endif %}
         {% if field.errors %}
             <label class="error" for="{{ field.auto_id }}">
                 {% for error in field.errors %}
