updating rss icon

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -75,7 +75,7 @@
         <h2>Team Activity
             {% if group.slug %}
                 <a class="atom_link" href="{% url group_activity_feed group.slug %}">
-                    <img src="{% dated_static 'images/theme/rss.png' %}" alt="atom feed" />
+                    <img src="{% dated_static 'images/theme/social_icons/16/feed.png' %}" alt="atom feed" width="16" height="16"/>
                 </a>
             {% endif %}
         </h2>
