--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -34,7 +34,7 @@
 <p>
     Subscribe to feed
     <a href="{% url blog_feed %}">
-        <img src="{% dated_static 'images/theme/rss.png' %}" alt="atom feed" />
+        <img src="{% dated_static 'images/theme/social_icons/16/feed.png' %}" alt="atom feed" width="16" height="16"/>
     </a>
 </p>
 {% endblock %}
