--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -50,7 +50,7 @@
         {% if records %}
             <h2>Recent Activity
                 <a class="atom_link" href="{% url user_activity_feed profile.user.id %}">
-                    <img src="{% dated_static 'images/theme/rss.png' %}" alt="atom feed" />
+                    <img src="{% dated_static 'images/theme/social_icons/16/feed.png' %}" alt="atom feed" width="16" height="16"/>
                 </a>
             </h2>
             {% for rec in records %}
