--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -5,7 +5,7 @@
 {% load thumbnail %}
 
 {% block title %}{{group.name}}{% endblock %}
-{% block extralinks %}
+{% block extrahead %}
     {% if group.slug %}
         <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower at Home Team Activity" />
     {% endif %}
