--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -2,7 +2,7 @@
 {% load record %}
 {% load dated_static %}
 {% block title %}{{profile_user.get_full_name}}'s profile{% endblock %}
-{% block extralinks %}
+{% block extrahead %}
     <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed profile.user.id %}" title="Repower at Home User Activity" />
     {# TODO: Add a noindex meta tag here if profile is private #}
 {% endblock %}
