--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -30,10 +30,17 @@
         </div>
         <div id="notifications_tab">
             <form id="group_notifications_form" action="" method="post" autocomplete="false">
-                {% for field in group_notification_form %}
-                    <div class="overset {% if field.errors %}error{% endif %}">
+                {% with group_notification_form.individual_group_notifications as field %}
+                    <div id="team_notifications" class="form_row overset {% if field.errors %}error{% endif %}">
                         {{ field.label_tag }}
+                        <div id="team_selectors" class="hidden">
+                            <a class="selector select_all" href="">Select All</a> |
+                            <a class="selector deselect_all" href="">Deselect All</a>
+                        </div>
                         {{ field }}
+                        {% if field.help_text %}
+                            <div class="help_text">{{ field.help_text }}</div>
+                        {% endif %}
                         {% if field.errors %}
                             <label class="error" for="{{ field.auto_id }}">
                                 {% for error in field.errors %}
@@ -42,7 +49,7 @@
                             </label>
                         {% endif %}
                     </div>
-                {% endfor %}
+                {% endwith %}
                 <p><input type="submit" name="edit_group_notifications" value="Save notifications" /></p>
                 {% csrf_token %}
             </form>
