--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -52,7 +52,10 @@
 
 
                     </div>
-                    <p><input type="submit" value="Join the Challenge" id="register_submit"/></p>
+                    <p>
+                        <input type="submit" value="Join the Challenge" id="register_submit"/> or
+                        <fb:login-button></fb:login-button>
+                    </p>
                     <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
                     {% csrf_token %}
                 </form>
@@ -60,9 +63,11 @@
                     Already have an account? <a href="{% url login %}{% if request.GET.next %}?next={{request.GET.next}}{% endif %}">Log in</a>
                 </p>
             </div>
-
         </div>
         <div class="box_three_bottom"></div>
     </div>
 {% endblock %}
 {% block js %}page_register{% endblock %}
+{% block extrajs %}
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
+{% endblock %}
