added help text to the notifications preferences

--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -30,7 +30,7 @@
         </div>
         <div id="notifications_tab">
             <form id="group_notifications_form" action="" method="post" autocomplete="false">
-                {% with group_notification_form.individual_group_notifications as field %}
+                {% with group_notification_form.notifications as field %}
                     <div id="team_notifications" class="form_row overset {% if field.errors %}error{% endif %}">
                         {{ field.label_tag }}
                         <div id="team_selectors" class="hidden">
