--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+      xmlns:og="http://opengraphprotocol.org/schema/"
+      xmlns:fb="http://www.facebook.com/2008/fbml" lang="en" xml:lang="en">
     <head>
         {% load dated_static %}
         <title>{% block title %}Save energy at home and organize your community{% endblock %} | Repower at Home</title>
