--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,7 +16,10 @@
                 {% with login_form as form %}
                     {% include "rah/_overset_form.html" %}
                 {% endwith %}
-                <p><input type="submit" value="Log in" /></p>
+                <p>
+                    <input type="submit" value="Log in" /> or
+                    <fb:login-button id="facebook_login"></fb:login-button>
+                </p>
                 {% csrf_token %}
                 <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
             </form>
@@ -27,5 +30,9 @@
         </div>
         <div class="box_two_bottom"></div>
     </div>
+    <div id="fb-root"></div>
 {% endblock %}
 {% block js %}page_login{% endblock %}
+{% block extrajs %}
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
+{% endblock %}
