removed the link to change your password from the profile_edit screen if a user's account is setup to login via facebook only.

--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -10,7 +10,9 @@
         <div id="account_tab">
             <p>
                 <a href="http://en.gravatar.com/" target="_blank">Change your avatar on gravatar.com</a><br/>
-                <a href="{% url password_change %}">Change your password</a><br/>
+                {% if not profile.facebook_connect_only %}
+                    <a href="{% url password_change %}">Change your password</a><br/>
+                {% endif %}
                 {% if profile.twitter_access_token %}
                     Your account is linked with twitter (<a href="{% url twitter_oauth_unauth %}">unlink</a>)
                 {% else %}
