--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -35,4 +35,7 @@
 {% block js %}page_login{% endblock %}
 {% block extrajs %}
     <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script>
+        FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});
+    </script>
 {% endblock %}
