--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -71,4 +71,7 @@
 {% block js %}page_register{% endblock %}
 {% block extrajs %}
     <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script>
+        FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});
+    </script>
 {% endblock %}
