--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,9 +93,9 @@ a.button:hover { color: white; }
 .form_row input, .form_row textarea {
     width: 100%;
     border: 1px #A1D3E4 solid;
-    padding: 10px;
-    font-size: 16px;
-    color: #84CBD6;
+    padding: 6px;
+    font-size: 14px;
+    color: #333;
     background: #fff url(../images/theme/0000000004_input_text_background.png) repeat-x;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px; }
@@ -121,6 +121,8 @@ a.button:hover { color: white; }
     font-family: helvetica;
     font-size: 12px;
     position: absolute;
+    font-weight:bold;
+    color: #555;
     top: 0;
     left: 0; }
 .form_row .help_text { font-size: 12px; color: grey; }
@@ -288,7 +290,7 @@ Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Ton
     background: #6EC3D1 url(../images/theme/0000000004_sprite_minor_col.png) repeat-x 0px -416px; 
     margin-top:-6px;
     margin-bottom:20px;
-    padding: 18px;
+    padding: 18px 18px 0px 18px;
     -moz-border-radius-bottomleft: 18px; -webkit-border-bottom-left-radius: 18px; border-bottom-left-radius: 18px; -moz-border-radius-bottomright: 18px; -webkit-border-bottom-right-radius: 18px; border-bottom-right-radius: 18px; }
 #tongue a {color: #FFF;}
 #tongue h3 {color: #333;}
@@ -522,6 +524,7 @@ Events Events Events Events Events Events Events Events Events Events Events Eve
 #event_guests_table .phone,
 #event_guests_table .zipcode  { width: 90px; }
 #event_guests_table .guest_comment { display: inline-table; }
+#rsvp_form .form_row {width:168px;}
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
